Feat: Finish auth controller using hexagonal